minimal functionality API call

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Customer Database</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
 </head>
+
 <body>
+  <h1>Internal Company Directory</h1>
   <div class="customers">
-    <!-- Put Your Customers In Here -->
+    <ul>
+
+    </ul>
+
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
