JS mostly finished, working on CSS

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <title>Customer Database</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
+  <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
 </head>
 
 <body>
   <h1>Internal Company Directory</h1>
-  <div class="customers">
-    <ul>
+  <div class="customers"> </div>
 
-    </ul>
-
-  </div>
   <script src="main.js"></script>
 </body>
 
