--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Customer Database</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
-  <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Internal Company Directory</h1>
+  <h1 class="headLine">Internal Company Directory</h1>
   <div class="customers"> </div>
 
   <script src="main.js"></script>
